@@ -25,7 +25,7 @@ getVDigest <- function(algo = c("md5", "sha1", "crc32", "sha256", "sha512",
     algo <- match.arg(algo, c("md5", "sha1", "crc32", "sha256", "sha512",
                               "xxhash32", "xxhash64", "murmur32", "spookyhash",
                               "blake3", "crc32c", "xxh3_64", "xxh3_128"))
-    errormode <- match.arg(errormode, c("stop","warn","silent"))
+
     algoint <- algo_int(algo)
     non_streaming_algos <- c("md5", "sha1", "crc32", "sha256", "sha512",
                              "xxhash32", "xxhash64", "murmur32", "blake3",
